Prediction formula fixed

--- a/notebooks/Activation Prediction.ipynb
+++ b/notebooks/Activation Prediction.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,21 +177,21 @@
     "        for tar in targets:\n",
     "            weight = nx.shortest_path_length(G, source=tar, target=n)\n",
     "            cumulative_weight.append(weight)\n",
-    "#         weights.append(np.exp(-sum(cumulative_weight)/len(targets)))\n",
-    "        weights.append(sum(np.exp(-np.array(cumulative_weight)))/len(targets))\n",
+    "        weights.append(np.exp(-sum(cumulative_weight)/len(targets)))\n",
+    "#         weights.append(sum(np.exp(-np.array(cumulative_weight)))/len(targets))\n",
     "    return weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate(weigths, s):\n",
-    "    pearson = pearsonr(weigths_list, s)[0]\n",
-    "    spearman = spearmanr(weigths_list, s)[0]\n",
-    "    ktau = kendalltau(weigths_list, s)[0]\n",
+    "def evaluate(pred, s):\n",
+    "    pearson = pearsonr(pred, s)[0]\n",
+    "    spearman = spearmanr(pred, s)[0]\n",
+    "    ktau = kendalltau(pred, s)[0]\n",
     "    return pearson, spearman, ktau\n",
     "    \n",
     "def print_results(res):\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,6 +219,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -227,22 +234,54 @@
     "betweenness = np.array(list(nx.betweenness_centrality(G).values()))\n",
     "eigenvector = np.array(list(nx.eigenvector_centrality(G).values()))\n",
     "pagerank = np.array(list(nx.pagerank(G, alpha=0.85).values()))\n",
-    "flow = np.array(list(nx.approximate_current_flow_betweenness_centrality(G).values()))\n",
+    "flow = list(nx.approximate_current_flow_betweenness_centrality(G).values())\n",
     "exp_deviation_closeness = closeness/np.mean(closeness)\n",
     "\n",
-    "sample_t, sample_s = walk_and_save(G, num_samples=100, draw=False)"
+    "res = []\n",
+    "sample_t, sample_s = walk_and_save(G, num_samples=10, draw=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "degrees = np.array([d for n, d in G.degree()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02dcbecf5a214aaba01c87e9243e04c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "res = []\n",
     "for targets, spreading in tqdm_notebook(zip(sample_t, sample_s)):\n",
     "    weights = get_exp_decay(G, targets)\n",
-    "    pred = np.array(weights)*(1+0.5*closeness+0.5*eigenvector+0.01*degrees)\n",
+    "    pred = np.array(weights)*(1+closeness+katz+betweenness+eigenvector+pagerank+flow+0.03*degrees)\n",
     "    res.append(evaluate(pred, spreading))\n",
     "    \n",
     "res = np.array(res)"
@@ -250,9 +289,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.96226767, 0.92033331, 0.79571382])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.mean(res, axis=0)"
    ]
