Header info added

--- a/notebooks/Activation Prediction.ipynb
+++ b/notebooks/Activation Prediction.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Школа \"Моделирование и анализ сетей\", 17-20 октября 2019\n",
+    "**Команда:** Александр Лобашев, Даша Ким\n",
+    "**Google Colab**: bit.ly/prediction_colab"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
