Header fixed again

--- a/notebooks/Activation Prediction.ipynb
+++ b/notebooks/Activation Prediction.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "## Школа \"Моделирование и анализ сетей\", 17-20 октября 2019\n",
-    "**Команда:** Александр Лобашев, Даша Ким </br>\n",
+    "**Команда:** Александр Лобашев, Даша Ким\n",
     "\n",
-    "**Google Colab**: [bit.ly/prediction_colab](bit.ly/prediction_colab)"
+    "**Google Colab**: [bit.ly/prediction_colab](https://bit.ly/prediction_colab)"
    ]
   },
   {
