--- a/notebooks/Activation Prediction.ipynb
+++ b/notebooks/Activation Prediction.ipynb
@@ -167,7 +167,7 @@
     "    'cmap': 'YlGnBu',\n",
     "    'with_labels':True\n",
     "    }\n",
-    "    nx.draw(Gk, pos, **options)\n"
+    "    nx.draw(Gk, pos, **options)"
    ]
   },
   {
@@ -318,7 +318,9 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -383,9 +385,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "networksch",
+   "display_name": "net",
    "language": "python",
-   "name": "networksch"
+   "name": "net"
   },
   "language_info": {
    "codemirror_mode": {
@@ -397,7 +399,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   },
   "varInspector": {
    "cols": {
