--- a/networksch/bin/easy_install-3.6
+++ b/networksch/bin/easy_install-3.6
@@ -1,10 +1,10 @@
-#!/home/kim/pet-projects/networksch/networksch/bin/python3
+#!/home/kim/juche/pet-projects/networksch/networksch/bin/python3
 
 # -*- coding: utf-8 -*-
 import re
 import sys
 
-from chardet.cli.chardetect import main
+from setuptools.command.easy_install import main
 
 if __name__ == '__main__':
     sys.argv[0] = re.sub(r'(-script\.pyw?|\.exe)?$', '', sys.argv[0])
