Assignment 03-04 & data added

--- a/notebooks/NS_Assignment_03-04.ipynb
+++ b/notebooks/NS_Assignment_03-04.ipynb
@@ -11,6 +11,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/kimaril/networksch/master)\n",
+    "\n",
+    "[<img src=https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png width=\"100\">](https://github.com/kimaril/networksch)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -406,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
