NS Assignment 5 added

--- a/notebooks/NS_Assignment_05.ipynb
+++ b/notebooks/NS_Assignment_05.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "True"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,117 +517,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ваш ход здесь\n",
-    "\n",
-    "def switch(G: nx.Graph, e1: tuple, e2: tuple):\n",
-    "    G.remove_edges_from([e1, e2])\n",
-    "    \n",
-    "    G.add_edges_from([(e1[0], e2[1]), (e2[0], e1[1])])\n",
-    "\n",
-    "def choose_random_edges(G: nx.Graph):\n",
-    "    edges = list(G.edges())\n",
-    "    chosen1 = random.choice(edges)\n",
-    "    equal = True\n",
-    "    while equal:\n",
-    "        chosen2 = random.choice(edges)\n",
-    "        equal = len(set(chosen1).intersection(chosen2))>0\n",
-    "    return chosen1, chosen2\n",
-    "\n",
-    "def choose_and_switch(G: nx.Graph):\n",
-    "    edges = choose_random_edges(G)\n",
-    "    switch(G, edges[0], edges[1])"
+    "def randomize(G, N_steps):\n",
+    "    for i in range(N_steps):\n",
+    "        nx.double_edge_swap(G, seed=42, max_tries=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_steps = 100\n",
-    "for i in range(N_steps):\n",
-    "    choose_and_switch(G)"
+    "randomize(G, N_steps=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "       False,  True,  True,  True,  True, False,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True, False,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True, False,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "       False,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True, False,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True, False,  True,  True,  True,\n",
-       "        True, False,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True])"
+       "True"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "check_degrees(G_old, G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def staticRatio(G, G_rand):\n",
+    "    return sum([e in G_rand.edges() for e in G.edges()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "935"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "staticRatio(G_old, G)"
    ]
   },
   {
