--- a/notebooks/NS Assignment 10.ipynb
+++ b/notebooks/NS Assignment 10.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import sys\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "from community import best_partition\n",
@@ -80,10 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
+    "A = nx.adjacency_matrix(G).todense().astype(np.float64)\n",
     "L = nx.laplacian_matrix(G).todense().astype(np.float64)"
    ]
   },
@@ -172,6 +174,142 @@
     "    и большинство их соседей.\n",
     "    \n",
     "Какие сообщества у дельфинов выделяет ваш алгоритм, сравните со спектральными методами. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LabelPropagation(T, Y, diff, max_iter, labelled):\n",
+    "    Y_init = Y\n",
+    "    Y1 = Y\n",
+    "    \n",
+    "    n=0\n",
+    "    current_diff = 2**10\n",
+    "    \n",
+    "    while current_diff > diff or n < max_iter:\n",
+    "        \n",
+    "        current_diff = 0.0\n",
+    "        Y0 = Y1\n",
+    "\n",
+    "        Y1 = T*Y0\n",
+    "        for i in range(Y_init.shape[0]):\n",
+    "            if i in labelled:\n",
+    "                for j in range(Y_init.shape[1]):\n",
+    "                    if i!=j:\n",
+    "                        Y1.A[i][j] = Y_init.A[i][j]\n",
+    "        \n",
+    "        for i in range(Y1.shape[0]):\n",
+    "            for j in range(Y1.shape[1]):\n",
+    "                current_diff += abs(Y1.A[i][j] - Y0.A[i][j])\n",
+    "        \n",
+    "        n += 1\n",
+    "        \n",
+    "    return Y1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D = np.identity(G.number_of_nodes())*np.array([d for n, d in G.degree()])\n",
+    "Dinv = np.linalg.inv(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = np.array([np.random.choice([0, 1]) for _ in range(G.number_of_nodes())]).reshape(-1,1)\n",
+    "Y = np.matrix(np.hstack((_,1-_)))\n",
+    "del _"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0.99999933, 1.        ],\n",
+       "        [1.        , 0.99999601],\n",
+       "        [0.9999991 , 0.99999472],\n",
+       "        [0.99999917, 0.99999476],\n",
+       "        [0.9999991 , 0.99999454],\n",
+       "        [0.99999927, 0.99999631],\n",
+       "        [0.99999923, 0.99999597],\n",
+       "        [0.9999983 , 0.99999199],\n",
+       "        [0.99999851, 0.99999279],\n",
+       "        [0.99999861, 0.99999321],\n",
+       "        [0.99999841, 0.99999241],\n",
+       "        [0.99999843, 0.99999247],\n",
+       "        [0.99999891, 0.99999446],\n",
+       "        [0.99999886, 0.99999398],\n",
+       "        [0.99999832, 0.99999206],\n",
+       "        [0.9999984 , 0.99999235],\n",
+       "        [0.99999916, 0.99999667],\n",
+       "        [0.99999904, 0.99999513],\n",
+       "        [0.99999905, 0.99999537],\n",
+       "        [0.99999897, 0.99999449],\n",
+       "        [0.99999901, 0.99999448],\n",
+       "        [0.99999899, 0.99999441],\n",
+       "        [0.99999901, 0.99999467],\n",
+       "        [0.99999899, 0.99999461],\n",
+       "        [0.99999825, 0.99999177],\n",
+       "        [0.99999823, 0.99999173],\n",
+       "        [0.99999826, 0.99999183],\n",
+       "        [0.99999823, 0.9999917 ],\n",
+       "        [0.9999983 , 0.99999195],\n",
+       "        [0.99999827, 0.99999185],\n",
+       "        [0.99999868, 0.99999337],\n",
+       "        [0.99999893, 0.99999461],\n",
+       "        [0.999999  , 0.99999471],\n",
+       "        [0.999999  , 0.99999459],\n",
+       "        [0.99999901, 0.99999464],\n",
+       "        [0.99999821, 0.99999162],\n",
+       "        [0.99999905, 0.99999531],\n",
+       "        [0.99999899, 0.99999461],\n",
+       "        [0.99999902, 0.99999461],\n",
+       "        [0.99999901, 0.99999455],\n",
+       "        [0.99999902, 0.99999464],\n",
+       "        [0.99999905, 0.99999475],\n",
+       "        [0.99999902, 0.99999467],\n",
+       "        [0.99999902, 0.99999468],\n",
+       "        [0.99999901, 0.99999473],\n",
+       "        [0.99999905, 0.99999484],\n",
+       "        [0.99999905, 0.99999476],\n",
+       "        [0.99999903, 0.99999474],\n",
+       "        [0.99999907, 0.99999466],\n",
+       "        [0.99999828, 0.99999191],\n",
+       "        [0.99999836, 0.99999221],\n",
+       "        [0.99999828, 0.99999191],\n",
+       "        [0.99999901, 0.9999947 ],\n",
+       "        [0.99999894, 0.99999437],\n",
+       "        [0.99999903, 0.99999526],\n",
+       "        [0.99999818, 0.99999153],\n",
+       "        [0.99999899, 0.99999457],\n",
+       "        [0.99999856, 0.99999289],\n",
+       "        [0.999999  , 0.99999463],\n",
+       "        [0.99999899, 0.99999459],\n",
+       "        [0.99999902, 0.999995  ],\n",
+       "        [0.99999827, 0.99999187]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LabelPropagation(Dinv*A, Y,  0.001, 1000, [0,1])"
    ]
   },
   {
