11th assignment added

--- a/notebooks/NS_Assignment_02_KimDV.ipynb
+++ b/notebooks/NS_Assignment_02_KimDV.ipynb
@@ -788,15 +788,8 @@
     "grouped = pd.concat([book1, book2, book3, book4, book5], axis=0).groupby(['Source', 'Target'])['weight'].sum()\n",
     "edges = np.array([np.array(pair) for pair in grouped.index.to_numpy()])\n",
     "books = pd.DataFrame(data={'Source' : edges[:,0], 'Target' : edges[:, 1], \n",
-    "                          'weight' : grouped.values, 'type' : ['Undirected']*grouped.shape[0]})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                          'weight' : grouped.values, 'type' : ['Undirected']*grouped.shape[0]})\n",
+    "\n",
     "G = nx.from_pandas_edgelist(books, 'Source', 'Target', edge_attr=True, create_using=nx.Graph())"
    ]
   },
