11th assignment added

--- a/notebooks/NS Assignment 11.ipynb
+++ b/notebooks/NS Assignment 11.ipynb
@@ -383,16 +383,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "k_shells = []\n",
-    "for i in "
+    "for i in list(range(k_max_shell, 0, -1))"
    ]
   },
   {
@@ -535,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,13 +537,19 @@
     "\n",
     "def salton_cosine(u, v):\n",
     "    degree = dict(G_1.degree())\n",
-    "    return common_neighbors(u, v)/np.sqrt(degree[u]*degree[v])"
+    "    return common_neighbors(u, v)/np.sqrt(degree[u]*degree[v])\n",
+    "\n",
+    "def serensen(u, v):\n",
+    "    degree = dict(G_1.degree())\n",
+    "    return 2*common_neighbors(u, v)/(degree[u]+degree[v])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 246,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -687,6 +686,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## By Salton cosine"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 249,
    "metadata": {},
@@ -694,7 +700,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0fcb46587bc47e9a0bba6462328dfa5",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -829,6 +835,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## By Serensen index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "44005dcc661744e0b509737246a73929",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Edge Pypar--Halder exists: False\n",
+      "Edge Cersei-Lannister--Joffrey-Baratheon exists: True\n",
+      "Edge Joffrey-Baratheon--Cersei-Lannister exists: True\n",
+      "Edge Halder--Pypar exists: False\n",
+      "Edge Sansa-Stark--Joffrey-Baratheon exists: True\n",
+      "Edge Hodor--Nan exists: False\n",
+      "Edge Nan--Hodor exists: False\n",
+      "Edge Drogo--Daenerys-Targaryen exists: True\n",
+      "Edge Daenerys-Targaryen--Drogo exists: True\n",
+      "Edge Marillion--Willis-Wode exists: False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>cn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Pypar</th>\n",
+       "      <th>Halder</th>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cersei-Lannister</th>\n",
+       "      <th>Joffrey-Baratheon</th>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Joffrey-Baratheon</th>\n",
+       "      <th>Cersei-Lannister</th>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Halder</th>\n",
+       "      <th>Pypar</th>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sansa-Stark</th>\n",
+       "      <th>Joffrey-Baratheon</th>\n",
+       "      <td>0.769231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hodor</th>\n",
+       "      <th>Nan</th>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nan</th>\n",
+       "      <th>Hodor</th>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drogo</th>\n",
+       "      <th>Daenerys-Targaryen</th>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Daenerys-Targaryen</th>\n",
+       "      <th>Drogo</th>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Marillion</th>\n",
+       "      <th>Willis-Wode</th>\n",
+       "      <td>0.727273</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             cn\n",
+       "Pypar              Halder              0.800000\n",
+       "Cersei-Lannister   Joffrey-Baratheon   0.800000\n",
+       "Joffrey-Baratheon  Cersei-Lannister    0.800000\n",
+       "Halder             Pypar               0.800000\n",
+       "Sansa-Stark        Joffrey-Baratheon   0.769231\n",
+       "Hodor              Nan                 0.750000\n",
+       "Nan                Hodor               0.750000\n",
+       "Drogo              Daenerys-Targaryen  0.750000\n",
+       "Daenerys-Targaryen Drogo               0.750000\n",
+       "Marillion          Willis-Wode         0.727273"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_by_metod(serensen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## By Jaccard coefficient"
    ]
   },
@@ -911,11 +1063,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## By Adamic-Adar index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Edge Tyrion-Lannister--Arya-Stark exists: True\n",
+      "Edge Bran-Stark--Jaime-Lannister exists: False\n",
+      "Edge Sansa-Stark--Tywin-Lannister exists: True\n",
+      "Edge Robb-Stark--Cersei-Lannister exists: True\n",
+      "Edge Jory-Cassel--Joffrey-Baratheon exists: False\n",
+      "Edge Petyr-Baelish--Robb-Stark exists: True\n",
+      "Edge Pycelle--Jaime-Lannister exists: True\n",
+      "Edge Sansa-Stark--Jon-Arryn exists: False\n",
+      "Edge Joffrey-Baratheon--Jon-Arryn exists: False\n",
+      "Edge Jon-Snow--Petyr-Baelish exists: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_by_ada = pd.DataFrame(list(nx.adamic_adar_index(G_1)), \n",
+    "                              columns=['source', 'target', 'coef']).sort_values(by='coef', ascending=False)\n",
+    "\n",
+    "top_by_ada.set_index(['source', 'target'], inplace=True)\n",
+    "top_by_ada['coef'] = top_by_ada['coef']*top_by_ada.index.map(lambda x : int(not G_1.has_edge(x[0], x[1])))\n",
+    "\n",
+    "top_by_ada = top_by_ada.sort_values('coef', ascending=False)\n",
+    "\n",
+    "for edge in top_by_ada[:10].index.to_list():\n",
+    "        print('Edge '+edge[0]+'--'+edge[1]+' exists:', G_sequel.has_edge(edge[0], edge[1]))"
+   ]
   }
  ],
  "metadata": {
